Disable some non-core debugging

--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -1193,13 +1193,13 @@
 %   that the arguments of \cs{if_dim:w} are entirely found before the
 %   expansion hits \cs{prg_return_true:}.
 %    \begin{macrocode}
-\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
+%\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
 \prg_new_conditional:Npnn \skip_compare_main:nNn #1#2#3 { p , T , F , TF }
   {
     \if_dim:w \tex_glueexpr:D #1 #2 \tex_glueexpr:D #3 \scan_stop:
       \prg_return_true: \else: \prg_return_false: \fi:
   }
-\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
+%\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
 \prg_new_conditional:Npnn \skip_compare_stretch:nNn #1#2#3 { p , T , F , TF }
   {
     \exp_after:wN \skip_compare_component_aux:wwNNN
@@ -1209,7 +1209,7 @@
       \tex_gluestretchorder:D
       \tex_gluestretch:D
   }
-\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
+%\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
 \prg_new_conditional:Npnn \skip_compare_shrink:nNn #1#2#3 { p , T , F , TF }
   {
     \exp_after:wN \skip_compare_component_aux:wwNNN
@@ -1249,7 +1249,7 @@
 %   if $a=a'$, $b=b'$ and $c=c'$.  The first is less than the second if
 %   and only if $a<a'$, $|b|<|b'|$, and $|c'|<|c|$.
 %    \begin{macrocode}
-\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
+%\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
 \prg_new_conditional:Npnn \skip_compare:nNn #1#2#3 { p , T , F , TF }
   {
     \exp_after:wN \__skip_compare:wwN
@@ -1312,7 +1312,7 @@
 %   \texttt{skip} counterparts, but mu expressions must be converted to
 %   glue using the \eTeX{} primitive \tn{mutoglue}.
 %    \begin{macrocode}
-\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
+%\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
 \prg_new_conditional:Npnn \muskip_compare_main:nNn #1#2#3 { p , T , F , TF }
   {
     \if_dim:w \tex_mutoglue:D \tex_muexpr:D #1
@@ -1322,7 +1322,7 @@
       \prg_return_false:
     \fi:
   }
-\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
+%\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
 \prg_new_conditional:Npnn \muskip_compare_stretch:nNn #1#2#3 { p , T , F , TF }
   {
     \exp_after:wN \skip_compare_component_aux:wwNNN
@@ -1332,7 +1332,7 @@
       \tex_gluestretchorder:D
       \tex_gluestretch:D
   }
-\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
+%\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
 \prg_new_conditional:Npnn \muskip_compare_shrink:nNn #1#2#3 { p , T , F , TF }
   {
     \exp_after:wN \skip_compare_component_aux:wwNNN
@@ -1349,7 +1349,7 @@
 %   This function uses the same auxiliaries as \cs{skip_compare:nNn},
 %   first converting the mu units to points.
 %    \begin{macrocode}
-\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
+%\__kernel_patch_conditional_args:nNNpnn { { (#1) } {#2} { (#3) } }
 \prg_new_conditional:Npnn \muskip_compare:nNn #1#2#3 { p , T , F , TF }
   {
     \exp_after:wN \__skip_compare:wwN
