--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -530,17 +530,12 @@
     \char_set_catcode_space:n { `\  }
     \ProvidesExplFileAux
   }
-\cs_set_protected:Npn \ProvidesExplFileAux #1#2#3#4
+\cs_set_protected:Npx \ProvidesExplFileAux #1#2#3#4
   {
-    \group_end:
-%<*initex>
-    \iow_log:x { File:~#1~#2~v#3~#4 }
-%</initex>
-%<*package>
-    \ProvidesFile {#1} [ #2~v#3~#4 ]
-%</package>
+    \cs_if_exist:NTF \ProvidesFile
+      { \exp_not:N \ProvidesFile {#1} [ #2~v#3~#4 ] }
+      { \iow_log:x { File:~#1~#2~v#3~#4 } }
   }
-
 \tex_input:D l3deprecation.def \scan_stop:
 %    \end{macrocode}
 %
