--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -792,7 +792,7 @@
     #1 \c_one_thousand         {  1000 } #2
     #1 \c_ten_thousand         { 10000 } #2
   }
-\cs_set_protected:Npn \@@_deprecated_constants:Nn #1#2#3
+\cs_set_protected:Npn \@@_deprecated_constants:Nn #1#2
   {
     \cs_if_free:NT #1
       { \int_const:Nn #1 {#2} }
