--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -532,6 +532,7 @@
   }
 \cs_set_protected:Npx \ProvidesExplFileAux #1#2#3#4
   {
+    \group_end:
     \cs_if_exist:NTF \ProvidesFile
       { \exp_not:N \ProvidesFile {#1} [ #2~v#3~#4 ] }
       { \iow_log:x { File:~#1~#2~v#3~#4 } }
