--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -125,8 +125,8 @@
 %     \cs{keys_define:nn} \Arg{module} \Arg{keyval list}
 %   \end{syntax}
 %   Parses the \meta{keyval list} and defines the keys listed there for
-%   \meta{module}. The \meta{module} name should be a text value, but
-%   there are no restrictions on the nature of the text. In practice the
+%   \meta{module}. The \meta{module} name is treated as a string.
+%   In practice the
 %   \meta{module} should be chosen to be unique to the module in question
 %   (unless deliberately adding keys to an existing module).
 %
