s/g/c/ in \__pdf_backend_object_ref:n for xetex

--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -271,7 +271,7 @@
 \__kernel_backend_postscript_header:n
   {
     /pdf.linkmargin { 1 ~ pdf.pt.dvi } def
-    /pdf.linkdp.pad { 0 } def 
+    /pdf.linkdp.pad { 0 } def
     /pdf.linkht.pad { 0 } def
   }
 %    \end{macrocode}
@@ -597,7 +597,7 @@
                      3 ~ exch ~ put ~
                    dup ~
                      pdf.outerbox ~ 2 ~ get ~
-                     pdf.linkmargin ~ add ~ 
+                     pdf.linkmargin ~ add ~
                      2 ~ exch ~ put ~
                    dup ~ dup ~
                      3 ~ get ~
@@ -799,7 +799,7 @@
     \int_gset_eq:NN \g_@@_backend_annotation_int \g_@@_backend_object_int
     \@@_backend_pdfmark:x
       {
-      
+
         /_objdef { pdf.obj \int_use:N \g_@@_backend_object_int }
         pdf.rect ~
         #4 ~
@@ -1057,7 +1057,7 @@
           \dim_to_decimal:n { \tex_baselineskip:D } ~ dup ~ 0 ~ gt
             { pdf.pt.dvi ~ def }
             { pop ~ pop }
-          ifelse 
+          ifelse
       }
   }
 \cs_new_protected:Npn \@@_backend_link_sf_save:
@@ -1197,7 +1197,7 @@
           /Dest ( #1 ) cvn
           /DEST
         }
-    \group_end:    
+    \group_end:
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1321,7 +1321,7 @@
 %    \begin{macrocode}
 \cs_new:Npx \@@_backend_link_last:
   {
-    \exp_not:N \int_value:w 
+    \exp_not:N \int_value:w
     \cs_if_exist:NTF \tex_pdffeedback:D
       { \exp_not:N \tex_pdffeedback:D lastlink ~ }
       { \exp_not:N \tex_pdflastlink:D }
@@ -1374,14 +1374,14 @@
       \hbox_set:Nn \l_@@_internal_box {#2}
      \cs_if_exist:NTF \tex_pdfextension:D
       { \exp_not:N \tex_pdfextension:D dest ~ }
-      { \exp_not:N \tex_pdfdest:D }  
+      { \exp_not:N \tex_pdfdest:D }
       name {#1}
       fitr ~
         width  \exp_not:N \box_wd:N \l_@@_internal_box
         height \exp_not:N \box_ht:N \l_@@_internal_box
-        depth  \exp_not:N \box_dp:N \l_@@_internal_box 
+        depth  \exp_not:N \box_dp:N \l_@@_internal_box
       \box_use:N \l_@@_internal_box
-    \group_end:    
+    \group_end:
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1472,7 +1472,7 @@
                   }
                 { stream }
                   {
-                    stream ~ attr ~ { \@@_exp_not_i:nn ##2 } ~ 
+                    stream ~ attr ~ { \@@_exp_not_i:nn ##2 } ~
                       { \@@_exp_not_ii:nn ##2 }
                   }
               }
@@ -1510,7 +1510,7 @@
                   }
                 { stream }
                   {
-                    stream ~ attr ~ { \@@_exp_not_i:nn ##2 } ~ 
+                    stream ~ attr ~ { \@@_exp_not_i:nn ##2 } ~
                       { \@@_exp_not_ii:nn ##2 }
                   }
               }
@@ -1702,7 +1702,7 @@
     \prop_gput:Nnn \g_@@_backend_object_prop {#1} {#2}
   }
 \cs_new:Npn \@@_backend_object_ref:n #1
-  { @pdf.obj \int_use:c { g_@@_backend_object_ \tl_to_str:n {#1} _int } }
+  { @pdf.obj \int_use:c { c_@@_backend_object_ \tl_to_str:n {#1} _int } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1949,7 +1949,7 @@
                 }
             }
         }
-    \group_end:    
+    \group_end:
   }
 %    \end{macrocode}
 % \end{macro}
