Some indexing fixes to the l3doc doc (see #450)
Some indexing fixes after Stone-Zeng's comments in #450. Namely:
1) Replace <@@=...> by <@@@@=...> in comments (bug introduced with #596);
2) Fixed `\@for\@tempa:=` (: is a letter here): replaced by `\clist_map_inline:Nn`;
3) Removed indexing of pseudo commands (`\meta{name}:\meta{signature}`);
4) `\>` would become `\!\efill` and `|` and `=` would fail to index.

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -266,7 +266,7 @@ and all files in that bundle must be distributed together.
 %
 %   Additionally, commands can be used in the argument of \cs{cs}.  For
 %   instance, |\cs{\meta{name}:\meta{signature}}| produces
-%   \cs{\meta{name}:\meta{signature}}.
+%   \cs[no-index]{\meta{name}:\meta{signature}}.
 %
 %   The \meta{options} are a key--value list which can contain the
 %   following keys:
@@ -3494,7 +3494,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{environment}{\NOTE}
+% \begin{environment}{NOTE}
 % \begin{NOTE}{wspr}
 %   this is what I #$%& think about this!
 % \end{NOTE}
@@ -3686,10 +3686,12 @@ and all files in that bundle must be distributed together.
     \@tempswatrue
     \if@partsw
       \@tempswafalse
-      \cs_set:Npx \@tempb{#1}
-      \@for\@tempa:=\@partlist\do
+      \cs_set:Npx \@tempb {#1}
+      \clist_map_inline:Nn \@partlist
         {
-          \ifx\@tempa\@tempb\@tempswatrue\fi
+          \if_meaning:w \@tempa \@tempb
+            \@tempswatrue
+          \fi:
         }
     \fi
     \if@tempswa
@@ -3825,7 +3827,7 @@ and all files in that bundle must be distributed together.
     }
   \cs_new_protected:Npn \@@_xmacro_code:w #1 < @ @ = #2 >
     {
-      % Add code before <@@=...>
+      % Add code before <@@@@=...>
       \tl_set:Nn \l_@@_tmpb_tl {#1}
       \@@_detect_internals:N \l_@@_tmpb_tl
       \@@_replace_at_at:N \l_@@_tmpb_tl
@@ -3833,7 +3835,7 @@ and all files in that bundle must be distributed together.
       % Check for \q_recursion_tail
       \quark_if_recursion_tail_stop_do:nn {#2}
         { \tl_use:N \l_@@_tmpa_tl }
-      % Change module name and add <@@=#2> to typeset output
+      % Change module name and add <@@@@=#2> to typeset output
       \tl_gset:Nn \g_@@_module_name_tl {#2}
       \tl_put_right:Nn \l_@@_tmpa_tl { < \text { \verbatim@font @ @ = #2 } > }
       % Loop
@@ -4221,7 +4223,7 @@ and all files in that bundle must be distributed together.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_quote_special_char:N #1
   {
-    \tl_map_inline:nn { \quotechar \actualchar \encapchar \levelchar }
+    \tl_map_inline:nn { \quotechar \actualchar \encapchar \levelchar \bslash }
       {
         \tl_replace_all:Nxn #1
           { \tl_to_str:N ##1 } { \quotechar \tl_to_str:N ##1 }
