Missing - for backend driver name

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1729,7 +1729,7 @@
     \iow_log:x { File:~#1~#2~v#3~#4 }
   }
 \tex_input:D
-  l3backend
+  l3backend-
   \sys_if_engine_xetex:TF
     { xdvipdfmx }
     {
