Reference the website for details of the team
Rather than add Phelype, try to avoid giving the same information slightly
differently in several places.

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -4495,12 +4495,7 @@ and all files in that bundle must be distributed together.
 \tl_const:Nn \Team
   {
     The~\LaTeX3~Project\thanks
-      {
-       Frank~Mittelbach,~Denys~Duchier,~Chris~Rowley,~
-       Rainer~Sch\"opf,~Johannes~Braams,~Michael~Downes,~
-       David~Carlisle,~Alan~Jeffrey,~Morten~H\o{}gholm,~Thomas~Lotze,~
-       Javier~Bezos,~Will~Robertson,~Joseph~Wright,~Bruno~Le~Floch
-      }
+      {\url{https://www.latex-project.org/latex3/}}
   }
 %    \end{macrocode}
 %
