--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1018,31 +1018,8 @@
 %
 % \section{The \LaTeX3 Project}
 %
-% Development of \LaTeX3 is carried out by The \LaTeX3 Project. Over time,
-% the membership of this team has naturally varied. Currently, the members
-% are
-% \begin{itemize}
-%   \item Johannes Braams
-%   \item David Carlisle
-%   \item Robin Fairbairns
-%   \item Ulrike Fischer
-%   \item Enrico Gregorio
-%   \item Morten H{\o}gholm
-%   \item Bruno Le Floch
-%   \item Frank Mittelbach
-%   \item Will Robertson
-%   \item Chris Rowley
-%   \item Rainer Sch{\"o}pf
-%   \item Joseph Wright
-% \end{itemize}
-% while former members are
-% \begin{itemize}
-%   \item Michael Downes
-%   \item Denys Duchier
-%   \item Alan Jeffrey
-%   \item Thomas Lotze
-%   \item Martin Schr{\"o}der
-% \end{itemize}
+% Development of \LaTeX3 is carried out by The \LaTeX3 Project:
+% \url{https://www.latex-project.org/latex3/}.
 %
 % \begin{thebibliography}{1}
 %
