--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1306,7 +1306,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_use:nnnnnnn #1#2#3#4#5#6#7
   {
-%<package>    \use:c { conditionally@traceoff }
+%<package>    \cs_if_exist_use:N \conditionally@traceoff
     \msg_if_exist:nnTF {#2} {#3}
       {
         \@@_class_chk_exist:nT {#1}
@@ -1324,7 +1324,7 @@
           }
       }
       { \__kernel_msg_error:nnxx { kernel } { message-unknown } {#2} {#3} }
-%<package>    \use:c { conditionally@traceon }
+%<package>    \cs_if_exist_use:N \conditionally@traceon
   }
 \cs_new_protected:Npn \@@_use_code: { }
 %    \end{macrocode}
