--- a/l3experimental/l3draw/l3draw-softpath.dtx
+++ b/l3experimental/l3draw/l3draw-softpath.dtx
@@ -300,7 +300,7 @@
 % \begin{macro}{\@@_softpath_round_action_close:}
 % \begin{macro}{\@@_softpath_round_lookahead:NnnNnn}
 % \begin{macro}{\@@_softpath_round_roundpoint:NnnNnnNnn}
-% \begin{macro}{\@@_softpath_round_calc:nnnNnn}
+% \begin{macro}{\@@_softpath_round_calc:NnnNnn}
 % \begin{macro}[EXP]
 %   {\@@_softpath_round_calc:nnnnnn, \@@_softpath_round_calc:fVnnnn}
 % \begin{macro}[EXP]{\@@_softpath_round_calc:nnnnw}
@@ -436,8 +436,9 @@
         { \token_if_eq_meaning_p:NN #4 \@@_softpath_close_op:nn }
       }
       {
-        \@@_softpath_round_calc:nnnNnn
-          \@@_softpath_round_loop:Nnn {#5} {#6}
+        \@@_softpath_round_calc:NnnNnn
+          \@@_softpath_round_loop:Nnn
+          {#5} {#6}
       }
       {
         \token_if_eq_meaning:NNTF #4 \@@_softpath_roundpoint_op:nn
@@ -450,16 +451,17 @@
 \cs_new_protected:Npn \@@_softpath_round_roundpoint:NnnNnnNnn
   #1#2#3#4#5#6#7#8#9
   {
-    \@@_softpath_round_calc:nnnNnn
+    \@@_softpath_round_calc:NnnNnn
       \@@_softpath_round_loop:Nnn
-      {#8} {#9} #1 {#2} {#3}
+      {#8} {#9}
+      #1 {#2} {#3}
     #4 {#5} {#6} #7 {#8} {#9}
   }
 %    \end{macrocode}
 %   We now have all of the data needed to construct a rounded corner: all that
 %   is left to do is to work out the detail! At this stage, we have details
-%   of where the corner itself is (|#4|, |#5|), and where the next point is
-%   (|#1|, |#2|). There are two types of calculations to do. First, we
+%   of where the corner itself is (|#5|, |#6|), and where the next point is
+%   (|#2|, |#3|). There are two types of calculations to do. First, we
 %   need to interpolate from those two points in the direction of the
 %   corner, in order to work out where the curve we are adding will start
 %   and end. From those, plus the points we already have, we work out where
@@ -468,7 +470,7 @@
 %   is worked out up-front and saved: we need that if dealing with a
 %   close-path operation.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_softpath_round_calc:nnnNnn #1#2#3#4#5#6
+\cs_new_protected:Npn \@@_softpath_round_calc:NnnNnn #1#2#3#4#5#6
   {
     \tl_set:Nx \l_@@_softpath_curve_end_tl
       {
@@ -546,7 +548,7 @@
   {
     \use:x
       {
-        \@@_softpath_round_calc:nnnNnn
+        \@@_softpath_round_calc:NnnNnn
           {
             \tl_set:Nx \exp_not:N \l_@@_softpath_move_tl
               {
