l3draw: Normalised vector should work with zero length
To match pgf but also as an error here is not helpful.

--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -421,7 +421,8 @@
 %     \cs{draw_point_unit_vector:n} \Arg{point}
 %   \end{syntax}
 %   Expands to the co-ordinates of a unit vector in the direction of the
-%   \meta{point} from the origin.
+%   \meta{point} from the origin. If the \meta{point} is at the origin,
+%   a vertical unit vector is returned
 % \end{function}
 %
 % \begin{function}[EXP]{\draw_point_transform:n}
