--- a/l3experimental/l3draw/l3draw-points.dtx
+++ b/l3experimental/l3draw/l3draw-points.dtx
@@ -216,22 +216,35 @@
 %
 % \begin{macro}[EXP]{\draw_point_unit_vector:n}
 % \begin{macro}[EXP]{\@@_point_unit_vector:nn}
-%   Only a single point expression so the expansion is done here. The
-%   outcome is the normalised vector from $(0,0)$ in the direction of
+% \begin{macro}[EXP]{\@@_point_unit_vector:nnn}
+%   The outcome is the normalised vector from $(0,0)$ in the direction of
 %   the point, \emph{i.e.}
 %   \[
 %     P_{x} = \frac{x}{\sqrt{x^{2} + y^{2}}} \quad
 %     P_{y} = \frac{y}{\sqrt{x^{2} + y^{2}}}
 %   \]
+%   except where the length is zero, in which case a vertical vector is
+%   returned.
 %    \begin{macrocode}
 \cs_new:Npn \draw_point_unit_vector:n #1
   { \@@_point_process:nn { \@@_point_unit_vector:nn } {#1} }
 \cs_new:Npn \@@_point_unit_vector:nn #1#2
   {
-    \@@_point_to_dim:n
-      { ( #1 , #2 ) / (sqrt(#1 * #1 + #2 * #2)) }
+    \exp_args:Nf \@@_point_unit_vector:nnn
+      { \fp_eval:n { (sqrt(#1 * #1 + #2 * #2)) } }
+      {#1} {#2}
+  }
+\cs_new:Npn \@@_point_unit_vector:nnn #1#2#3
+  {
+    \fp_compare:nNnTF {#1} = \c_zero_fp
+      { 0pt, 1pt }
+      {
+        \@@_point_to_dim:n
+          { ( #2 , #3 ) / #1 }
+      }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
