Clarify that mappings don't happen in a group [ci skip]

--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -339,6 +339,10 @@
 %
 % \section{Mapping to property lists}
 %
+% All mappings are done at the current group level, \emph{i.e.}~any
+% local assignments made by the \meta{function} or \meta{code} discussed
+% below remain in effect after the loop.
+%
 % \begin{function}[updated = 2013-01-08, rEXP]
 %   {\prop_map_function:NN, \prop_map_function:cN}
 %   \begin{syntax}
