--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -505,6 +505,10 @@
 %
 % \section{Mapping to token lists}
 %
+% All mappings are done at the current group level, \emph{i.e.}~any
+% local assignments made by the \meta{function} or \meta{code} discussed
+% below remain in effect after the loop.
+%
 % \begin{function}[updated = 2012-06-29, rEXP]
 %   {\tl_map_function:NN, \tl_map_function:cN}
 %   \begin{syntax}
