Make all "map_variable" leave the variable set to the last item (fixes #581)

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -458,7 +458,9 @@
 %   in turn in the (string or token list) \meta{variable} and applies
 %   the \meta{code}.  The \meta{code} will usually make use of the
 %   \meta{variable}, but this is not enforced.  The assignments to the
-%   \meta{variable} are local.  See also \cs{str_map_inline:Nn}.
+%   \meta{variable} are local.  Its value after the loop is the last
+%   \meta{character} in the \meta{string}, or its original value if the
+%   \meta{string} is empty.  See also \cs{str_map_inline:Nn}.
 % \end{function}
 %
 % \begin{function}[added = 2017-11-14]
@@ -471,7 +473,9 @@
 %   the (string or token list) \meta{variable} and applies the
 %   \meta{code}.  The \meta{code} will usually make use of the
 %   \meta{variable}, but this is not enforced.  The assignments to the
-%   \meta{variable} are local.  See also \cs{str_map_inline:Nn}.
+%   \meta{variable} are local.  Its value after the loop is the last
+%   \meta{character} in the \meta{string}, or its original value if the
+%   \meta{string} is empty.  See also \cs{str_map_inline:Nn}.
 % \end{function}
 %
 % \begin{function}[added = 2017-10-08, rEXP]{\str_map_break:}
