--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -559,8 +559,10 @@
 %   Stores each \meta{item} of the \meta{tl~var} in turn in the (token
 %   list) \meta{variable} and applies the \meta{code}.  The \meta{code}
 %   will usually make use of the \meta{variable}, but this is not
-%   enforced.  The assignments to the \meta{variable} are local.  See
-%   also \cs{tl_map_inline:Nn}.
+%   enforced.  The assignments to the \meta{variable} are local.  Its
+%   value after the loop is the last \meta{item} in the \meta{tl~var},
+%   or its original value if the \meta{tl~var} is blank.  See also
+%   \cs{tl_map_inline:Nn}.
 % \end{function}
 %
 % \begin{function}[updated = 2012-06-29]{\tl_map_variable:nNn}
@@ -571,6 +573,8 @@
 %   (token list) \meta{variable} and applies the \meta{code}.  The
 %   \meta{code} will usually make use of the \meta{variable}, but this
 %   is not enforced.  The assignments to the \meta{variable} are local.
+%   Its value after the loop is the last \meta{item} in the
+%   \meta{tl~var}, or its original value if the \meta{tl~var} is blank.
 %   See also \cs{tl_map_inline:nn}.
 % \end{function}
 %
@@ -2407,9 +2411,10 @@
 % \begin{macro}{\tl_map_variable:nNn}
 % \begin{macro}{\tl_map_variable:NNn, \tl_map_variable:cNn}
 % \begin{macro}{\@@_map_variable:Nnn}
-%   \cs{tl_map_variable:nNn} \meta{token list} \meta{temp} \meta{action}
-%   assigns
-%   \meta{temp} to each element and executes \meta{action}.
+%   \cs{tl_map_variable:nNn} \meta{token list} \meta{tl~var}
+%   \meta{action} assigns \meta{tl~var} to each element and executes
+%   \meta{action}.  The assignment to \meta{tl~var} is done after the
+%   quark test so that this variable does not get set to a quark.
 %    \begin{macrocode}
 \cs_new_protected:Npn \tl_map_variable:nNn #1#2#3
   {
@@ -2421,8 +2426,8 @@
   { \exp_args:No \tl_map_variable:nNn }
 \cs_new_protected:Npn \@@_map_variable:Nnn #1#2#3
   {
+    \quark_if_recursion_tail_break:nN {#3} \tl_map_break:
     \tl_set:Nn #1 {#3}
-    \quark_if_recursion_tail_break:NN #1 \tl_map_break:
     \use:n {#2}
     \@@_map_variable:Nnn #1 {#2}
   }
