--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -326,22 +326,26 @@
 %   until reaching the end of the file, stores the \meta{lines} in the
 %   \meta{tl~var} then applies the \meta{code}.  The \meta{code} will
 %   usually make use of the \meta{variable}, but this is not enforced.
-%   The assignments to the \meta{variable} are local.  \TeX{} ignores
+%   The assignments to the \meta{variable} are local.
+%   Its value after the loop is the last set of \meta{lines}, or its
+%   original value if the \meta{stream} is empty.  \TeX{} ignores
 %   any trailing new-line marker from the file it reads.
 %   This function is typically faster than \cs{ior_map_inline:Nn}.
 % \end{function}
 %
 % \begin{function}[added = 2019-01-13]{\ior_str_map_variable:NNn}
 %   \begin{syntax}
-%     \cs{ior_str_map_variable:NNn} \meta{stream} \meta{tl~var} \Arg{code}
+%     \cs{ior_str_map_variable:NNn} \meta{stream} \meta{variable} \Arg{code}
 %   \end{syntax}
 %   For each \meta{line} in the \meta{stream}, stores the \meta{line} in
-%   the \meta{tl~var} then applies the \meta{code}.  The material is
+%   the \meta{variable} then applies the \meta{code}.  The material is
 %   read from the \meta{stream} as a series of tokens with category code
 %   $12$ (other), with the exception of space characters which are given
 %   category code $10$ (space).  The \meta{code} will usually make use
 %   of the \meta{variable}, but this is not enforced.  The assignments
-%   to the \meta{variable} are local.  Note that \TeX{} removes trailing
+%   to the \meta{variable} are local.  Its value after the loop is the
+%   last \meta{line}, or its original value if the \meta{stream} is
+%   empty.  Note that \TeX{} removes trailing
 %   space and tab characters (character codes 32 and 9) from every line
 %   upon input.  \TeX{} also ignores any trailing new-line marker from
 %   the file it reads.
