Document that \fp_abs:n {inf} is an error contrarily to abs() [ci skip]
The reason is that \fp_abs:n expresses its result in decimal notation.

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -1370,9 +1370,10 @@
 %   \end{syntax}
 %   Evaluates the \meta{floating point expression} as described for
 %   \cs{fp_eval:n} and leaves the absolute value of the result in the
-%   input stream.  If the argument is a tuple, \enquote{invalid
-%   operation} occurs, but no other case raises exceptions.  Within
-%   floating point expressions, |abs()| can be used.
+%   input stream.  If the argument is $\pm\infty$, \nan{} or a tuple,
+%   \enquote{invalid operation} occurs.  Within floating point
+%   expressions, |abs()| can be used; it accepts $\pm\infty$ and \nan{}
+%   as arguments.
 % \end{function}
 %
 % \begin{function}[EXP, added = 2012-09-26, tested = m3fp-convert003]
