Make round(.,nan)=nan with no "Invalid operation" error

--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -369,6 +369,20 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}[EXP]{\@@_kind:w}
+%   Expands to $0$ for zeros, $1$ for normal floating point numbers, $2$
+%   for infinities, $3$ for \nan{}, $4$ for tuples.
+%    \begin{macrocode}
+\cs_new:Npn \@@_kind:w #1
+  {
+    \@@_if_type_fp:NTwFw
+      #1 \@@_use_ii_until_s:nnw
+      \s_@@ { \@@_use_i_until_s:nw 4 }
+      \q_stop
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsection{Overflow, underflow, and exact zero}
 %
 %^^A todo: the sign of exact zeros should depend on the rounding mode.
