--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -1089,6 +1089,7 @@
 %   $x$~to $n$~places.  If $n$~is an integer, this rounds~$x$ to a
 %   multiple of~$10^{-n}$; if $n=+\infty$, this always yields~$x$; if
 %   $n=-\infty$, this yields one of $\pm 0$, $\pm\infty$, or~\nan{}; if
+%   $n=\nan{}$, this yields \nan{}; if
 %   $n$~is neither $\pm\infty$ nor an integer, then an \enquote{invalid
 %     operation} exception is raised.  When \meta{fpexpr_2} is omitted,
 %   $n=0$, \emph{i.e.}, \meta{fpexpr_1} is rounded to an integer.  The
@@ -1096,7 +1097,7 @@
 %   \begin{itemize}
 %     \item |round| yields the multiple of~$10^{-n}$ closest to~$x$,
 %       with ties ($x$ half-way between two such multiples) rounded
-%       as follows.  If $t$ is \texttt{nan} or not given the even
+%       as follows.  If $t$ is \texttt{nan} (or not given) the even
 %       multiple is chosen (\enquote{ties to even}), if $t=\pm 0$ the
 %       multiple closest to $0$ is chosen (\enquote{ties to zero}),
 %       if $t$ is positive/negative the multiple closest to $\infty$/$-\infty$ is chosen
