Provide function to test for nan floating point

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -1420,7 +1420,7 @@
 %   \item Add an |array(1,2,3)| and |i=complex(0,1)|.
 %   \item Provide an experimental |map| function?  Perhaps easier to
 %     implement if it is a single character, |@sin(1,2)|?
-%   \item Provide \cs{fp_if_nan:nTF}, and an |isnan| function?
+%   \item Provide an |isnan| function analogue of \cs{fp_if_nan:nTF}?
 %   \item Support keyword arguments?
 % \end{itemize}
 % \pkg{Pgfmath} also provides box-measurements (depth, height, width), but
