--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -246,6 +246,15 @@
 %   is~$0$.
 % \end{function}
 %
+% \begin{function}[pTF, added = 2019-08-25]{\fp_if_nan:n}
+%   \begin{syntax}
+%     \cs{fp_if_nan:n} \Arg{fpexpr}
+%   \end{syntax}
+%   Evaluates the \meta{fpexpr} and tests whether the result is exactly
+%   \nan{}.  The test returns \texttt{false} for any other result, even
+%   a tuple containing \nan{}.
+% \end{function}
+%
 % \section{Additions to \pkg{l3fparray}}
 %
 % \begin{function}[added = 2018-05-05]{\fparray_new:Nn}
