--- a/l3kernel/l3fp-logic.dtx
+++ b/l3kernel/l3fp-logic.dtx
@@ -83,13 +83,28 @@
 %     \cs{@@_ternary_auxii:NwwN} have to be understood.
 % \end{itemize}
 %
-% \subsection{Existence test}
+% \subsection{Tests}
 %
 % \begin{macro}[pTF]{\fp_if_exist:N, \fp_if_exist:c}
 %   Copies of the \texttt{cs} functions defined in \pkg{l3basics}.
 %    \begin{macrocode}
 \prg_new_eq_conditional:NNn \fp_if_exist:N \cs_if_exist:N { TF , T , F , p }
 \prg_new_eq_conditional:NNn \fp_if_exist:c \cs_if_exist:c { TF , T , F , p }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[pTF]{\fp_if_nan:n}
+%   Evaluate and check if the result is a floating point of the same
+%   kind as \nan{}.
+%    \begin{macrocode}
+\prg_new_conditional:Npnn \fp_if_nan:n #1 { TF , T , F , p }
+  {
+    \if:w 3 \exp_last_unbraced:Nf \@@_kind:w { \@@_parse:n {#1} }
+      \prg_return_true:
+    \else:
+      \prg_return_false:
+    \fi:
+  }
 %    \end{macrocode}
 % \end{macro}
 %
